cp1 fix: added the possibility of passing empty when calling varargs